🎨 Isolating some components

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -48,7 +48,10 @@
         ]
       }
     ],
-    "import/prefer-default-export": "off"
+    "import/prefer-default-export": "off",
+    // só fazem sentido em projetos não-typescript
+    "react/jsx-props-no-spreading": "off",
+    "react/prop-types": "off"
   },
   "settings": {
     "import/resolver": {
