--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -49,6 +49,7 @@
       }
     ],
     "import/prefer-default-export": "off",
+    "no-unused-expressions": "off",
     // só fazem sentido em projetos não-typescript
     "react/jsx-props-no-spreading": "off",
     "react/prop-types": "off"
