--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -52,7 +52,8 @@
     "no-unused-expressions": "off",
     // só fazem sentido em projetos não-typescript
     "react/jsx-props-no-spreading": "off",
-    "react/prop-types": "off"
+    "react/prop-types": "off",
+    "@typescript-eslint/camelcase": "off"
   },
   "settings": {
     "import/resolver": {
